--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -40,15 +40,10 @@
 
     <Button
         android:id="@+id/signout"
-        android:layout_width="116dp"
-        android:layout_height="62dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="signout"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.152"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/testtxt"
-        app:layout_constraintVertical_bias="0.551" />
+        app:layout_constraintBottom_toTopOf="@+id/mail"  app:layout_constraintEnd_toStartOf="@+id/name"   app:layout_constraintHorizontal_bias="0.0"      app:layout_constraintStart_toStartOf="parent"   app:layout_constraintTop_toTopOf="parent"        app:layout_constraintVertical_bias="0.0"      />
 
     <Button
         android:id="@+id/nextbtn"
@@ -67,6 +62,10 @@
         android:layout_width="97dp"
         android:layout_height="57dp"
         android:text="Image"
-        tools:layout_editor_absoluteX="243dp"
-        tools:layout_editor_absoluteY="544dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nextbtn"
+        app:layout_constraintVertical_bias="0.5" />
 </androidx.constraintlayout.widget.ConstraintLayout>
