--- a/app/src/main/res/layout/monitor.xml
+++ b/app/src/main/res/layout/monitor.xml
@@ -21,7 +21,7 @@
         android:id="@+id/status1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Status: No intruders detected"
+        android:text=""
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
