--- a/app/src/main/res/layout/monitor.xml
+++ b/app/src/main/res/layout/monitor.xml
@@ -102,4 +102,15 @@
         app:layout_constraintTop_toBottomOf="@+id/longitude"
         app:layout_constraintVertical_bias="0.852" />
 
+    <TextView
+        android:id="@+id/locTextView"
+        android:layout_width="157dp"
+        android:layout_height="41dp"
+        android:text="dist"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.466" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
