--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -9,13 +9,14 @@
 
     <TextView
         android:id="@+id/mail"
-        android:layout_width="298dp"
-        android:layout_height="36dp"
-        android:layout_marginTop="100dp"
+        android:layout_width="378dp"
+        android:layout_height="67dp"
+        android:layout_marginTop="132dp"
+        android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.515"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
@@ -23,12 +24,11 @@
         android:id="@+id/nextbtn"
         android:layout_width="247dp"
         android:layout_height="60dp"
-        android:layout_marginTop="112dp"
+        android:layout_marginTop="152dp"
         android:background="@drawable/dashboard_box"
         android:text="View Status"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.485"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mail" />
 
@@ -36,7 +36,7 @@
         android:id="@+id/button5"
         android:layout_width="265dp"
         android:layout_height="65dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="80dp"
         android:background="@drawable/rounded_corner_view2"
         android:text="Add members"
         android:textColor="#FFFFFF"
@@ -47,12 +47,13 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="139dp"
+        android:layout_height="41dp"
         android:fontFamily="@font/poppins_semibold"
         android:text="Welcome,"
+        android:textAlignment="center"
         android:textColor="#FFFFFF"
-        android:textSize="16sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
